@@ -8,13 +8,15 @@ import java.io.OutputStream;
 import java.net.ServerSocket;
 import java.net.Socket;
 import java.nio.charset.StandardCharsets;
-import java.util.Map;
+import java.util.Collections;
 
 import org.junit.jupiter.api.Test;
 
 import hexacloud.core.cluster.Cluster;
 import hexacloud.core.cluster.event.ClusterEvent;
 import hexacloud.core.event.EventBusManager;
+import hexacloud.core.event.EventFormat;
+import hexacloud.core.model.PingProtocol;
 import hexacloud.core.server.route.RouteRegistry;
 
 public class WsTransportTest {
@@ -55,10 +57,10 @@ public class WsTransportTest {
             EventBusManager.getGlobal().dispatch(new ClusterEvent.NodeEventSubmitted(
                 "http://127.0.0.1:7001",
                 7001,
-                "HTTP",
-                "json",
+                PingProtocol.HTTP,
+                EventFormat.JSON,
                 "cache.warmed",
-                Map.of("detail", "products")
+                Collections.singletonMap("detail", "products")
             ));
             String submittedFrame = readTextFrame(in);
             assertTrue(submittedFrame.contains("\"type\":\"NodeEventSubmitted\""));
